--- a/LoveStory/App_GlobalResources/Lang.zh-CN.resx
+++ b/LoveStory/App_GlobalResources/Lang.zh-CN.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ApplicationName" xml:space="preserve">
+    <value>爱的故事</value>
+  </data>
+  <data name="HomePage" xml:space="preserve">
+    <value>主页</value>
+  </data>
   <data name="HomeTitle" xml:space="preserve">
     <value>爱的故事</value>
   </data>
